# chess-vision

./: .gitignore  README.md  pyproject.toml
configs/: benchmark.yaml  hand_eye.example.yaml  rfdetr.yaml  yolo.yaml
data/: README.md  roboflow_presets.yaml
data/checkpoints/: README.md
docs/: benchmark.md  commands.md  datasets.md  grid_detector.md  models.md
oakd_lite/: camera.py  chess_camera.py
recipes/: README.md
recipes/_common/: setting.py
recipes/roboflow/: setting.py
scripts/: benchmark_yolo_checkpoints.py  build_video_pseudo_dataset.py  chess_pipeline.py  convert_to_oak.py  create_demo_video.py  download_dataset.py  download_roboflow.py  download_yolo_pretrained.py  evaluate_models.py  export_rfdetr_checkpoint.py  grid_camera.py  live_benchmark.py  normalize_dataset.py  plot_nt_dataset_debug.py  run_benchmark_image.py  run_chess_detection_oak.py  run_video_subset_inference.py  run_yolo26_chess_pieces_2.py  test_grid_detection.py  udp_streamer.py
src/: board_stream.py  grid_detector.py  live_pipeline.py
src/data/: class_mapping.py  dataset_loader.py  preprocessor.py  roboflow_inference.py  video_frames.py
src/evaluation/: __init__.py  coco_eval.py  dataset.py  live_runner.py  runner.py  types.py
src/inference/: infer_rfdetr.py  infer_yolo.py  realtime.py
src/metrics/: __init__.py
src/robotics/: hand_eye.py  transforms.py
src/training/: checkpoints.py  optimizers.py  paths.py  post_train_eval.py  rfdetr_checkpoints.py  rfdetr_params.py  run_mode.py  train_rfdetr.py  train_yolo.py  yolo_params.py
src/utils/: evaluation.py
(+28 files in other folders)
