[project]
name = "chess-vision"
version = "0.1.0"
description = "Chess piece detection: YOLO/RF-DETR training, OAK-D Lite inference, UDP board stream"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy",
    "pandas",
    "setuptools>=78.1.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "kaggle>=1.5.0",
    "roboflow>=1.1.0",
    "inference-sdk>=0.9.0",
    "rfdetr[train]>=1.8.1",
    "pycocotools>=2.0.6",
    "python-dotenv>=1.0.0",
    "depthai",
    "onnx>=1.12.0,<2.0.0",
    "onnxslim>=0.1.93",
    "onnxruntime>=1.23.2",
    "blobconverter>=1.4.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "oakd_lite*"]
